# swaplang

./: LICENSE  README.md
.github/workflows/: docker.yml
backend/: .env.template  .gitignore  pyproject.toml
backend/change_lang/: main.py
backend/change_lang/translator/: model.py  translate.py
backend/swaplang/: __main__.py  frontend.py  main.py
backend/swaplang/api/: __init__.py  router.py
backend/swaplang/api/routes/: api_docs.py  auth.py  events.py  settings.py  translate.py  users.py
backend/swaplang/auth/: __init__.py  password.py  token.py  user.py
backend/swaplang/config/: __init__.py  logger_config.py  settings.py
backend/swaplang/database/: __init__.py  database.py
backend/swaplang/models/: __init__.py  common.py  language.py  translation.py  user.py
backend/swaplang/scripts/: __init__.py  prestart.py
backend/swaplang/services/: auth_service.py  language_service.py  settings_service.py  translate_service.py  user_service.py
backend/swaplang/translator/: __init__.py  model.py  translate.py
backend/swaplang/utils/: cursor.py  logger.py
backend/swaplang/utils/events/: __init__.py  event_manager.py  models.py  tqdm.py
docker/: Dockerfile
frontend/: .env.example  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/components/: AppOptions.svelte  Button.svelte  DownloadBar.svelte  DownloadModel.svelte  Field.svelte  Header.svelte  History.svelte  LangSelect.svelte  LazyLoading.svelte  ModelDownload.svelte  Notify.svelte  ProgressBar.svelte  SearchBar.svelte  TextSpinner.svelte  Translation.svelte
frontend/src/lib/sdk/: interceptors.ts  sdk.ts  types.ts  utils.ts
frontend/src/lib/state/: notify.svelte.ts  user.svelte.ts
frontend/src/lib/utils/: auth.svelte.ts  cursor.ts  formaters.ts  handler.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/(login)/: +layout.svelte
frontend/src/routes/(login)/login/: +page.ts  +page@login.svelte
frontend/src/routes/(main)/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/(main)/history/: +page.svelte  +page.ts
frontend/src/routes/(main)/settings/: +layout.svelte  +page.ts
frontend/src/routes/(main)/settings/account/: +page.svelte  +page.ts
frontend/src/routes/history/: +page.svelte
(+3 files in other folders)
