[project]
name = "changeLang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.118.0",
    "llama-cpp-python==0.3.16",
    "uvicorn>=0.37.0",
    "uvloop>=0.21.0",
]

[tool.uv.sources]
llama-cpp-python = [
    {index = "llama-cpp-python-cu124"}
]

[[tool.uv.index]]
name = "llama-cpp-python-cu124"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "fastapi-cli[standard-no-fastapi-cloud-cli]>=0.0.13",
]
